Support feature-specific offsets to allow for manual datum adjustments or similar constant adjustments, #36.